move buttons in frame view, fix popup alignment

--- a/src/components/page/hiveEdit/hiveTopInfo/styles.less
+++ b/src/components/page/hiveEdit/hiveTopInfo/styles.less
@@ -6,7 +6,7 @@
 	box-sizing: border-box;
 	display: flex;
 
-	@media @tablet {	
+	@media @tablet {
 		padding: @tabletPadPx;
 	}
 
@@ -20,10 +20,17 @@
 }
 
 .wrap4 {
-	padding: @mobilePadPx;
-
 	@media @tablet {
 		display: flex;
 		width: 100%;
 	}
+}
+
+.wrap5 {
+	width: 100%;
+	padding: @mobilePadPx;
+}
+
+#raceYear {
+	margin-top: 5px;
 }
